@@ -57,7 +57,7 @@ make install \
 %{_mandir}/man8/*
 
 %changelog
-* Tue Nov 27 2007 - dgilbert at interlog dot com
+* Wed Dec 19 2007 - dgilbert at interlog dot com
 - allow multiple devices to be given
   * sdparm-1.03
 * Mon Oct 08 2007 - dgilbert at interlog dot com
