@@ -2,7 +2,7 @@ sdparm (1.03-0.1) unstable; urgency=low
 
   * allow multiple devices to be given
 
- -- Douglas Gilbert <dgilbert@interlog.org>  Tue, 27 Nov 2007 18:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.org>  Wed, 19 Dec 2007 12:00:00 -0500
 
 sdparm (1.02-1) unstable; urgency=low
 
